[gd_scene load_steps=5 format=3 uid="uid://db1hgaega784n"]

[ext_resource type="Script" path="res://control.gd" id="1_m4qbq"]
[ext_resource type="PackedScene" uid="uid://dgmu6um1p5du7" path="res://xr_origin_3d.tscn" id="2_fb7he"]
[ext_resource type="PackedScene" uid="uid://c2830qnod2j82" path="res://scenes/environment.tscn" id="3_2ql1s"]
[ext_resource type="PackedScene" uid="uid://bxhbngi466nlm" path="res://scenes/maze/maze.tscn" id="3_gw4gx"]

[node name="Main" type="Node3D"]
script = ExtResource("1_m4qbq")

[node name="XRPlayer" parent="." instance=ExtResource("2_fb7he")]
transform = Transform3D(35, 0, 0, 0, 35, 0, 0, 0, 35, 0, 0, 0)

[node name="LeftHand" parent="XRPlayer/LeftHand" index="0"]
transform = Transform3D(0.948876, 0.315649, 0, -0.103806, 0.312054, 0.944376, 0.298091, -0.896096, 0.328867, 0, -0.08, -0.06)
visible = true

[node name="MeshInstance3D" parent="XRPlayer/LeftHand" index="1"]
visible = true

[node name="RightHand" parent="XRPlayer/RightHand" index="0"]
transform = Transform3D(0.948876, -0.315649, 0, 0.103806, 0.312054, 0.944376, -0.298091, -0.896096, 0.328867, 0, -0.08, -0.06)
visible = true

[node name="WorldEnvironment" parent="." instance=ExtResource("3_2ql1s")]

[node name="Maze" parent="." instance=ExtResource("3_gw4gx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.799999, 23.3719, -20.2306)

[node name="X" type="SpinBox" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 94.0625
offset_bottom = 42.0

[node name="Y" type="SpinBox" parent="."]
offset_left = 11.0
offset_top = 49.0
offset_right = 94.0625
offset_bottom = 80.0

[node name="Z" type="SpinBox" parent="."]
offset_left = 11.0
offset_top = 87.0
offset_right = 94.0625
offset_bottom = 118.0

[node name="Button" type="Button" parent="."]
offset_left = 11.0
offset_top = 127.0
offset_right = 107.0
offset_bottom = 158.0
text = "Test"

[connection signal="haptic" from="Maze/Marble" to="." method="_on_marble_haptic"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="XRPlayer"]
[editable path="Maze"]
